tests/ui/macros/macro-error.stderr
error: macro rhs must be delimited
  --> $DIR/macro-error.rs:2:18
   |
LL |     ($a:expr) => a;
   |                  ^

error: expected type, found keyword `false`
  --> $DIR/macro-error.rs:8:12
   |
LL |     let _: cfg!(FALSE) = ();
   |            ^^^^^^^^^^^
   |            |
   |            expected type
   |            this macro call doesn't expand to a type
   |
   = note: this error originates in the macro `cfg` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

